syntax = "proto3";

package proto;

import "buf/validate/validate.proto";

option go_package = "./proto";


message UpsertReservationRequest {
  string reservationId = 1 [(buf.validate.field).required = false, (buf.validate.field).string.uuid = true];
  string resourceId = 2 [(buf.validate.field).string.uuid = true];
  int64 startAtUnix = 3;
  int64 endAtUnix = 4;
}
message UpsertReservationResponse {
  string reservationId = 1 [(buf.validate.field).required = false, (buf.validate.field).string.uuid = true];
  int64 reservedUntilUnix = 2;
}
